[tool.poetry]
authors = ["bandprotocol <dev@bandprotocol.com>"]
description = "Python webserver as a gateway between BandChain validators and premium data API"
license = "GPL-3.0 license"
name = "pds-gateway"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
cachetools = "^5.2.0"
fastapi = "^0.95.0"
httpx = "^0.23.1"
motor = "^3.1.2"
pydantic = "^1.10.2"
python = "^3.11"
python-dotenv = "^1.0.0"
pytimeparse = "^1.1.8"
uvicorn = "^0.21.1"
packaging = "^23.2"
redis = {extras = ["hiredis"], version = "^4.5.4"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-httpx = "^0.21.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'
